event swagger annotations
